support SCLS SPCS secrets in Java/scala